<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/city"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            android:text="@string/temp"
            />
        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            android:text="@string/tempUnit"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/weatherDescription"
        android:layout_marginTop="14dp" />

    <LinearLayout
        android:id="@+id/humid_layer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/humid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humid"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="24sp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/humidity_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="24sp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/enter_city"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_city_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="40dp"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_get_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/refreshButton" />

</LinearLayout>
